[package]
name = "proxytheus"
version = "0.1.0"
authors = ["Sam Waterbury <samwaterbury1@gmail.com>"]
edition = "2021"
description = "Simple proxy for accessing secure Prometheus metrics."
repository = "https://github.com/samwaterbury/proxytheus"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.6.20"
clap = { version = "4.3.22", features = ["derive", "env"] }
oauth2 = "4.4.1"
reqwest = "0.11.18"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1"
tracing-subscriber = "0.3"
